# KPicoSim

./: .directory  AUTHORS  ChangeLog  Makefile.in  README.md  acinclude.m4  configure  configure.in  configure.in.in
admin/: acinclude.m4.in
debian/: changelog  conffiles.ex  control  cron.d.ex  init.d.ex  kpicosim-default.ex  kpicosim.doc-base.EX  kpicosim.links  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch
doc/: Makefile.am  Makefile.in
doc/en/: Makefile.am  Makefile.in  index.docbook
po/: Makefile.am  Makefile.in  kpicosim.pot  nl.po
src/: .directory  Makefile.am  Makefile.in  cassembler.cpp  cassembler.h  cinstruction.cpp  cinstruction.h  codeeditor.cpp  codeeditor.h  cpicoblaze.cpp  jtag.cpp  jtag.h  jtagdevice.cpp  jtagdevice.h  jtagprogrammer.cpp  jtagprogrammer.h  kexportdialog.cpp  kexportdialog.h  kjtagdialog.cpp  kjtagdialog.h  kpicosim.cpp  kpicosim.desktop  kpicosim.h  kpicosimconfig.h  kpicosimui.rc  kport.cpp  kport.h  kportview.cpp  kportview.h  kprocessorview.cpp  kprocessorview.h  kscratchpadview.cpp  kscratchpadview.h  kserialview.cpp  kserialview.h  ksimulator.cpp  ksimulator.h  main.cpp  psm.xml
src/pics/: Makefile.am  Makefile.in
